fix: dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,8 +44,10 @@
     }
 
     .article-global {
-        @apply bg-base transition-all rounded-xl p-4 prose prose-neutral dark:prose-invert max-w-none prose-img:rounded-xl
-        prose-pre:break-words prose-pre:whitespace-pre-wrap prose-h1:pt-24 prose-h1:-mt-24 prose-h2:pt-24 prose-h2:-mt-[4.5rem]
+        @apply bg-base transition-all rounded-xl p-4 prose prose-neutral dark:prose-invert max-w-none
+        prose-img:rounded-xl prose-img:max-h-screen prose-pre:break-words prose-pre:whitespace-pre-wrap
+        prose-h1:pt-24 prose-h1:-mt-24
+        prose-h2:pt-24 prose-h2:-mt-[4.5rem]
     }
 
     .blur-global {
